# AI-SPM

./: .gitignore  Cargo.toml  README.md  e2e_tests.py  userguide.md
.github/workflows/: release.yml
config/: default.toml
crates/ai-spm-audit/: Cargo.toml
crates/ai-spm-audit/src/: lib.rs  provenance.rs  tamper_log.rs  trace.rs
crates/ai-spm-core/: Cargo.toml
crates/ai-spm-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/ai-spm-gateway/: Cargo.toml
crates/ai-spm-gateway/src/: envelope.rs  fs_sentinel.rs  lib.rs  mcp.rs  policy.rs  shell_guard.rs
crates/ai-spm-identity/: Cargo.toml
crates/ai-spm-identity/src/: attestation.rs  jit_tokens.rs  lib.rs  registry.rs  store.rs
crates/ai-spm-monitor/: Cargo.toml
crates/ai-spm-monitor/src/: config.rs  lib.rs  main.rs  report_ui.rs  reporter.rs  types.rs
crates/ai-spm-monitor/src/watchers/: agent_discovery.rs  cmd_watcher.rs  fs_watcher.rs  mod.rs  net_watcher.rs  process_watcher.rs
crates/ai-spm-reasoning/: Cargo.toml
crates/ai-spm-reasoning/src/: hide.rs  inspector.rs  lib.rs  taint.rs
crates/ai-spm-redteam/: Cargo.toml
crates/ai-spm-redteam/src/: benchmark.rs  lib.rs  probing.rs  report.rs
crates/ai-spm-server/: Cargo.toml
crates/ai-spm-server/src/: api.rs  main.rs
data/golden_datasets/: default.json
policies/: example.rego
scripts/: build_mac.sh  build_win.ps1  guard.sh  pre-commit
ui/: index.html  userguide.md
