[package]
name = "ai-spm-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Decision Audit & Observability: hash-chained tamper-evident logs and provenance"

[dependencies]
ai-spm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
