[package]
name = "ai-spm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types, error handling, and configuration for AI Security Posture Management"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
