[package]
name = "ai-spm-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent Gateway: Policy Control Plane with OPA, MCP middleware, and intent envelopes"

[dependencies]
ai-spm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
jsonschema = { workspace = true }
