[package]
name = "ai-spm-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Identity & Access Plane: NHI Registry, SVID attestation, JIT tokens"

[dependencies]
ai-spm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
