[package]
name = "ai-spm-redteam"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Continuous Adversarial Testing: GOAT/Crescendo probing and regression benchmarking"

[dependencies]
ai-spm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
