[package]
name = "ai-spm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HTTP server, REST API, and CLI for AI Security Posture Management"

[[bin]]
name = "ai-spm"
path = "src/main.rs"

[dependencies]
ai-spm-core = { workspace = true }
ai-spm-identity = { workspace = true }
ai-spm-gateway = { workspace = true }
ai-spm-reasoning = { workspace = true }
ai-spm-audit = { workspace = true }
ai-spm-redteam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
